@@ -6,11 +6,19 @@ import java.sql.DriverManager;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.LinkedList;
+import java.util.List;
 
+import javax.ejb.ConcurrencyManagement;
+import javax.ejb.ConcurrencyManagementType;
 import javax.ejb.LocalBean;
+import javax.ejb.Lock;
+import javax.ejb.LockType;
 import javax.ejb.Singleton;
 
+import routing.RoutingBeanRemote;
 import database.*;
 
 /**
@@ -18,11 +26,23 @@ import database.*;
  */
 @Singleton
 @LocalBean
+@ConcurrencyManagement(ConcurrencyManagementType.CONTAINER)
 public class ReplicaManagerBean implements ReplicaManagerBeanRemote {
 
-	LinkedList<Database> replicaList;
+	RoutingBeanRemote rb;
+
 	Database primary = new Database(new InetSocketAddress("127.0.0.1", 3306), "fly_portal");
-	Database backup1 = new Database(new InetSocketAddress("127.0.0.1", 3306), "fly_portal_backup");
+
+	ArrayList<Database> rl = new ArrayList<Database>() {
+		/**
+		 * 
+		 */
+		private static final long serialVersionUID = 1L;
+
+		{
+			add(new Database(new InetSocketAddress("127.0.0.1", 3306), "fly_portal_backup"));
+		}
+	};
 	/**
 	 * Default constructor. 
 	 */
@@ -36,8 +56,6 @@ public class ReplicaManagerBean implements ReplicaManagerBeanRemote {
 
 	@Override
 	public Database getPrimary() throws DatabaseException {
-		replicaList = new LinkedList<Database>();
-		replicaList.add(backup1);
 		String url = "jdbc:mysql://" + primary.getIsa().getHostString() + ":" + primary.getIsa().getPort() + "/";
 		String db = primary.getName();
 		try {
@@ -45,8 +63,9 @@ public class ReplicaManagerBean implements ReplicaManagerBeanRemote {
 			DriverManager.getConnection(url+db+"?autoReconnect=true&useSSL=false","admin","password");
 			return primary;
 		} catch (ClassNotFoundException | SQLException e) {
-			if(!replicaList.isEmpty()) {
-				primary = replicaList.getFirst();
+			if(!rl.isEmpty()) {
+				primary = rl.get(0);
+				rl.remove(0);
 				return getPrimary();
 			}
 			else throw new DatabaseException("Replica fail, system crashed");	//No other replica in list
@@ -54,24 +73,22 @@ public class ReplicaManagerBean implements ReplicaManagerBeanRemote {
 	}
 
 	@Override
+	@Lock(LockType.READ)
 	public Database getReplica() throws DatabaseException {
-		replicaList = new LinkedList<Database>();
-		replicaList.add(backup1);
-		if(!replicaList.isEmpty()) 
-			for(Database d : replicaList) {
-				String url = "jdbc:mysql://" + d.getIsa().getHostString() + ":" + d.getIsa().getPort() + "/";
-				String db = d.getName();
-				try {
-					Class.forName("com.mysql.jdbc.Driver");
-					DriverManager.getConnection(url+db+"?autoReconnect=true&useSSL=false","admin","password");
-					return d;
-				} catch (ClassNotFoundException | SQLException e) {
-					replicaList.remove(d);
-					return getReplica();
-				}
+		if(!rl.isEmpty()) {
+			Database d = rl.get(0);
+			String url = "jdbc:mysql://" + d.getIsa().getHostString() + ":" + d.getIsa().getPort() + "/";
+			String db = d.getName();
+			try {
+				Class.forName("com.mysql.jdbc.Driver");
+				DriverManager.getConnection(url+db+"?autoReconnect=true&useSSL=false","admin","password");
+				return d;
+			} catch (ClassNotFoundException | SQLException e) {
+				rl.remove(d);
+				return getReplica();
 			}
+		}
 		else throw new DatabaseException("Replica fail, system crashed");
-		return null;
 	}
 
 	@Override
@@ -91,11 +108,11 @@ public class ReplicaManagerBean implements ReplicaManagerBeanRemote {
 			con.close();
 		} catch (ClassNotFoundException | SQLException e) {
 			e.printStackTrace();
-			primary = getPrimary();
-			executeUpdate(query);
+			if(!rl.isEmpty())
+				primary = getReplica();
 		}
 
-		for(Database db : replicaList) {
+		for(Database db : rl) {
 			url = "jdbc:mysql://" + db.getIsa().getHostString() + ":" + db.getIsa().getPort() + "/";
 			dbName = db.getName();
 			try {
@@ -107,8 +124,8 @@ public class ReplicaManagerBean implements ReplicaManagerBeanRemote {
 				con.close();
 			} catch (ClassNotFoundException | SQLException e) {
 				e.printStackTrace();
-				replicaList.remove(db);
-				if(replicaList.isEmpty())
+				rl.remove(db);
+				if(rl.isEmpty())
 					throw new DatabaseException("No more replica.");
 			}
 		}
@@ -116,9 +133,8 @@ public class ReplicaManagerBean implements ReplicaManagerBeanRemote {
 	}
 
 	@Override
-	public ResultSet executeQuery(String query) {
+	public ResultSet executeQuery(String query) throws DatabaseException {
 
-		//here is possible implement a traffic balancer
 		Database db = primary;
 
 		String url = "jdbc:mysql://" + db.getIsa().getHostString() + ":" + db.getIsa().getPort() + "/";
@@ -130,23 +146,44 @@ public class ReplicaManagerBean implements ReplicaManagerBeanRemote {
 			return stmt.executeQuery(query);
 		} catch (ClassNotFoundException | SQLException e) {
 			e.printStackTrace();
-			try {
-				getPrimary();
-			} catch (DatabaseException e1) {
-				e1.printStackTrace();
-			}
+			primary = getPrimary();
 			executeQuery(query);
 		}
 		return null;
 	}
 
 	@Override
-	public void addReplica(Database db) throws DatabaseException {
-		replicaList.add(db);
+	public ResultSet executeQuery(String query, String param) throws DatabaseException {
+
+		HashSet<Database> dbSet = new HashSet<>();
+		dbSet.add(primary);
+		dbSet.addAll(rl);
+		Database db = rb.Geo(dbSet);
+
+		String url = "jdbc:mysql://" + db.getIsa().getHostString() + ":" + db.getIsa().getPort() + "/";
+		String dbName = db.getName();
+		try {
+			Class.forName("com.mysql.jdbc.Driver");
+			Connection con = DriverManager.getConnection(url+dbName+"?autoReconnect=true&useSSL=false","admin","password");
+			Statement stmt = con.createStatement();
+			return stmt.executeQuery(query);
+		} catch (ClassNotFoundException | SQLException e) {
+			e.printStackTrace();
+			primary = getPrimary();
+			executeQuery(query, param);
+		}
+		return null;
 	}
 
 	@Override
+	@Lock(LockType.WRITE)
+	public void addReplica(Database db) throws DatabaseException {
+		rl.add(db);
+	}
+
+	@Override
+	@Lock(LockType.WRITE)
 	public void removeReplica(Database db) throws DatabaseException {
-		replicaList.remove(db);
+		rl.remove(db);
 	}
 }
